iptables/rules.v4
#####
*nat
#####

-A POSTROUTING -s 10.8.0.0/10 -o eth0 -j MASQUERADE

COMMIT



########
*filter
########

:INPUT   ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT  ACCEPT [0:0]

# Allow all loopback (lo) traffic and reject anything
# to localhost that does not originate from lo.
-A INPUT   -i lo                -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j REJECT
-A OUTPUT  -o lo                -j ACCEPT

# Allow ping and ICMP error returns.
-A INPUT  -p icmp -i eth0                              -j ACCEPT
-A INPUT  -p icmp -m state --state NEW --icmp-type 8   -j ACCEPT
-A INPUT  -p icmp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p icmp                                      -j ACCEPT

# Allow outgoing DNS.
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED --dport 53 -j ACCEPT
-A INPUT  -p udp -m state --state ESTABLISHED     --sport 53 -j ACCEPT
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 53 -j ACCEPT
-A INPUT  -p tcp -m state --state ESTABLISHED     --sport 53 -j ACCEPT

# Allow incoming DNS.
-A INPUT  -p udp -m state --state NEW,ESTABLISHED --dport 53 -j ACCEPT
-A OUTPUT -p udp -m state --state ESTABLISHED     --sport 53 -j ACCEPT
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 53 -j ACCEPT

# Allow outgoing HTTP.
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 80 -j ACCEPT
-A INPUT  -p tcp -m state --state ESTABLISHED     --sport 80 -j ACCEPT

# Allow incoming HTTP.
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 80 -j ACCEPT

# Allow outgoing HTTPS.
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 443 -j ACCEPT
-A INPUT  -p tcp -m state --state ESTABLISHED     --sport 443 -j ACCEPT

# Allow incoming HTTPS.
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 443 -j ACCEPT

# Allow incoming SSH.
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 22 -j ACCEPT

# Allow outgoing TOR.
-A OUTPUT -o eth0 -p tcp -m owner --uid-owner debian-tor -j ACCEPT
-A INPUT  -i eth0 -p tcp -m state --state ESTABLISHED    -j ACCEPT

# Allow VPN.
-A INPUT  -i tun0 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT

# Allow outgoing Emercoin P2P.
-A OUTPUT -o eth0 -p tcp -m state --state NEW,ESTABLISHED --dport 6661 -j ACCEPT
-A INPUT  -i eth0 -p tcp -m state --state ESTABLISHED     --sport 6661 -j ACCEPT

# Allow incoming Emercoin P2P.
-A INPUT  -i eth0 -p tcp -m state --state NEW,ESTABLISHED --dport 6661 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED     --sport 6661 -j ACCEPT

# Allow incoming Emercoin RPC.
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 6662 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 6662 -j ACCEPT

# Allow outgoing Namecoin P2P.
-A OUTPUT -o eth0 -p tcp -m state --state NEW,ESTABLISHED --dport 8334 -j ACCEPT
-A INPUT  -i eth0 -p tcp -m state --state ESTABLISHED     --sport 8334 -j ACCEPT

# Allow incoming Namecoin P2P.
-A INPUT  -i eth0 -p tcp -m state --state NEW,ESTABLISHED --dport 8334 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED     --sport 8334 -j ACCEPT

# Allow incoming Namecoin RPC.
-A INPUT  -p tcp -m state --state NEW,ESTABLISHED --dport 8336 -j ACCEPT
-A OUTPUT -p tcp -m state --state ESTABLISHED     --sport 8336 -j ACCEPT

# Defaults.
-A INPUT   -j REJECT
-A FORWARD -j ACCEPT
-A OUTPUT  -j REJECT

COMMIT
